@@ -9,6 +9,7 @@ Changes in progress
 - Avoid deletion of main pages (Trello #909)
 - Modified code to check if is xtecadmin or superadmin (Trello #902)
 - Block access to install script (Trello #521)
+- Prevent the creation of restricted pages (Trello #871)
 
 
 
